@@ -114,9 +114,9 @@ evsignal_init(struct event_base *base)
 
         evutil_make_socket_nonblocking(base->sig.ev_signal_pair[0]);
 
-	event_set(&base->sig.ev_signal, base->sig.ev_signal_pair[1],
+	event_assign(&base->sig.ev_signal, base, base->sig.ev_signal_pair[1],
 		EV_READ | EV_PERSIST, evsignal_cb, &base->sig.ev_signal);
-	base->sig.ev_signal.ev_base = base;
+
 	base->sig.ev_signal.ev_flags |= EVLIST_INTERNAL;
 }
 
